2007-02-22  Neil Williams <linux@codehelp.co.uk>

	* Makefile.am : prevent code churn in the 
	translation files.
	* qof/qoferror.c : fix QofError handling 
	to ensure filenames are used when requested
	and missing values are handled without a crash.

2006-12-26  Neil Williams <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c : Don't try to
	update backend data unless it has actually 
	changed.
	* backend/file/qsf-backend.c : In case of a stat
	error, see if we can't create a file at that path.
	QSF is meant to accept beginning or ending a QofSession
	with an empty file.

2006-11-30  Neil Williams <linux@codehelp.co.uk>

	* qof/deprecated.c : Remove struct tm.tm_gmtoff 
	define and wrapper - tm_gmtoff is required for
	QofTime.
	* configure.in : Remove struct tm.tm_gmtoff detection
	macro which complicates cross-compilation.

2006-11-27  Neil Williams <linux@codehelp.co.uk>

	* Makefile.am : package the .pot file directly. 
	TP is simply too slow.
	* emdebian/ : "emdebian method changed - 
	remove control files.
	* qof/deprecated.h,
	qof/deprecated.c : Fix compatibility issue.
	Replace QofErrorId with original QofBackendError
	in the deprecated support code.


2006-10-29  Neil Williams <linux@codehelp.co.uk>

	* configure.in,
	doc/Makefile.am : Allow doxygen to be
	disabled correctly.

2006-10-15  Neil Williams <linux@codehelp.co.uk>

	* qof/qofutil.c : Set the current parameter 
	before asking the backend to commit that 
	parameter value.

2006-10-10  Neil Williams <linux@codehelp.co.uk>

	* autogen.sh : Remove maintainer mode.
	* configure.in : Remove maintainer mode,
	fix gettext problem in familiar build.

	* backend/file/qsf-xml.c : Prevent seg.
	fault if object count is missing.

2006-10-09  Neil Williams <linux@codehelp.co.uk>

	* qof/qoftime.h : Add <time.h> to solve
	problem on familiar build.
	* qof/qoftime.c : Replace g_date_set_timeval
	which is not available in glib2-0 2.6.
	* qof/deprecated.c : Regress deprecated