@@ -1,3 +1,9 @@
+2007-05-21  Neil Williams <linux@codehelp.co.uk>
+
+	* qof/qof-util.h,
+	qof/qof-util.c : Port qof UTF8 conversion from
+	qof-main to qof-util, rename qof_util_make_utf8.
+
 2007-02-22  Neil Williams <linux@codehelp.co.uk>
 
 	* Makefile.am : prevent code churn in the 
